syntax = "proto3";

import "google/protobuf/timestamp.proto";

package products_service;

option go_package = "./;products_service";

service ProductsService {
  rpc CreateProduct(CreateProductReq) returns (CreateProductRes);
  rpc UpdateProduct(UpdateProductReq) returns (UpdateProductRes);
  rpc GetProductByID(GetProductByIDReq) returns (GetProductByIDRes);
}

message Product {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message CreateProductReq {
  string Name = 1;
  string Description = 2;
  double Price = 3;
}

message CreateProductRes {
  string ProductID = 1;
}

message UpdateProductReq {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
}

message UpdateProductRes {}

message GetProductByIDReq {
  string ProductID = 1;
}

message GetProductByIDRes {
  Product Product = 1;
}